remove un-used condition + fix scroll margin

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.scss
@@ -3,7 +3,7 @@
 .category-list {
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 0 $spacing-3 0 0;
 }
 
 .category-list__item {
