--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -1,7 +1,5 @@
 @use "variables" as *;
 
-$default-scroll-width: 17px;
-
 .category-field__header {
     align-items: center;
     flex-wrap: wrap;
@@ -43,7 +41,7 @@ $default-scroll-width: 17px;
     flex: 0 0 25%;
     gap: $spacing-1;
     padding: $spacing-3;
-    padding-right: calc($spacing-3 - $default-scroll-width);
+    padding-right: 0;
     &.empty {
         padding-left: 0;
     }
