implementation(Category Field):  #29186 Handle Empty Category Message (#29388)
### Proposed Changes
* Display an empty category message component when no categories are
available.



### Screenshots
<img width="1337" alt="image"
src="https://github.com/user-attachments/assets/787e8ea6-6865-4096-b198-55618b692ff0">

<img width="1321" alt="image"
src="https://github.com/user-attachments/assets/bf570c3f-847a-4f79-8760-9b97c1d1681e">

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -1,7 +1,5 @@
 @use "variables" as *;
 
-$default-scroll-width: 17px;
-
 .category-field__header {
     align-items: center;
     flex-wrap: wrap;
@@ -43,7 +41,10 @@ $default-scroll-width: 17px;
     flex: 0 0 25%;
     gap: $spacing-1;
     padding: $spacing-3;
-    padding-right: calc($spacing-3 - $default-scroll-width);
+    padding-right: 0;
+    &.empty {
+        padding-left: 0;
+    }
 }
 
 .category-field__categories,
@@ -63,4 +64,18 @@ $default-scroll-width: 17px;
     padding: 0;
     height: 100%;
     overflow: hidden;
+}
+
+.category-field__empty-state {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: $spacing-3;
+
+    p {
+        text-align: center;
+        font-size: $font-size-smd;
+    }
 }
