--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -51,21 +51,30 @@
             </div>
         </div>
 
-        <div class="category-field__right-pane flex flex-column">
-            <div class="category-field__selected-categories-list flex-1">
-                <dot-category-field-selected
-                    (removeItem)="store.removeSelected($event)"
-                    [categories]="store.selected()" />
-            </div>
-            <div class="category-field__actions flex justify-content-end">
-                <button
-                    (click)="store.removeSelected($allCategoryKeys())"
-                    class="p-button p-button-link"
-                    data-testId="clear_all-btn"
-                    pButton>
-                    {{ 'edit.content.category-field.sidebar.button.clear-all' | dm }}
-                </button>
-            </div>
+        <div
+            class="category-field__right-pane flex flex-column"
+            [ngClass]="{ empty: !store.selected().length }">
+            @if (store.selected().length) {
+                <div class="category-field__selected-categories-list flex-1">
+                    <dot-category-field-selected
+                        (removeItem)="store.removeSelected($event)"
+                        [categories]="store.selected()" />
+                </div>
+                <div class="category-field__actions flex justify-content-end">
+                    <button
+                        (click)="store.removeSelected($allCategoryKeys())"
+                        class="p-button p-button-link"
+                        data-testId="clear_all-btn"
+                        pButton>
+                        {{ 'edit.content.category-field.sidebar.button.clear-all' | dm }}
+                    </button>
+                </div>
+            } @else {
+                <div class="category-field__empty-state" data-testId="category-field__empty-state">
+                    <i class="pi pi-check-square"></i>
+                    <p>{{ 'edit.content.category-field.sidebar.empty-state' | dm }}</p>
+                </div>
+            }
         </div>
     </div>
 </p-sidebar>
