--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -64,3 +64,15 @@ $default-scroll-width: 17px;
     height: 100%;
     overflow: hidden;
 }
+
+:host ::ng-deep .p-breadcrumb {
+    > ul > li {
+        &:last-child a {
+            pointer-events: none;
+            .p-menuitem-text {
+                color: $black;
+                font-weight: $font-weight-bold;
+            }
+        }
+    }
+}
