chore(ui): working in collapse bredcrumb

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
@@ -1,5 +1,5 @@
 <div class="w-full category-list__header">
-    <dot-collapse-breadcrumb [model]="$breadcrumbs()" />
+    <dot-collapse-breadcrumb [model]="$breadcrumbsMenu()" />
 </div>
 <div
     [ngClass]="{ 'no-overflow-x-yet': $emptyColumns().length }"
