chore(ui): working in collapse bredcrumb

--- a/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-collapse-breadcrumb/dot-collapse-breadcrumb.component.html
@@ -1,4 +1,4 @@
-<div class="flex align-items-center">
+<div class="flex align-items-center h-2rem">
     @if ($isCollapsed()) {
         <div class="flex align-items-center">
             <div>
