--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
@@ -16,25 +16,33 @@
                         data-testId="category-item"
                         class="flex align-content-center align-items-center category-list__item"
                         [ngClass]="{ 'category-list__item--selected': item.clicked }"
-                        (click)="rowClicked.emit({ index, item })">
-                        <p-checkbox
+                        >
+                            <p-checkbox
                             [(ngModel)]="$selected"
                             [value]="item.key"
+                            class="category-list__item-checkbox"
                             (onChange)="itemChecked.emit({ selected: $event.checked, item })" />
 
-                        <label
-                            data-testId="category-item-label"
-                            class="flex flex-grow-1 category-list__item-label"
-                            [class.cursor-pointer]="item.hasChildren"
-                            [for]="item.key">
-                            {{ item.value }}
-                        </label>
+                            <div class="flex w-full h-full align-items-stretch align-content-center category-list__item-wrapper" (click)="rowClicked.emit({ index, item })" [class.cursor-pointer]="item.hasChildren">
+                                <div class="flex w-full align-content-center align-items-center">
+                                    <label
+                            
+                                    data-testId="category-item-label"
+                                    class="flex flex-grow-1 category-list__item-label"
+                                    [class.cursor-pointer]="item.hasChildren"
+                                    [for]="item.key">
+                                    {{ item.value }}
+                                </label>
 
-                        @if (item.hasChildren) {
-                            <i
-                                data-testId="category-item-with-child"
-                                class="pi pi-chevron-right category-list__item-icon"></i>
-                        }
+                                @if (item.hasChildren) {
+                                    <i
+                                        data-testId="category-item-with-child"
+                                        class="pi pi-chevron-right category-list__item-icon"></i>
+                                }
+                                </div>
+                            </div>
+
+                        
                     </div>
                 }
             </div>
