feat(editor-content): implement breadcrumb navigation for categories (#29394)
### Parent Issue
https://github.com/dotCMS/core/issues/29184

### Proposed Changes
* Implement dot-collapse-breadcrumb in SideMenu for CategoryField
* Create getMenuItemsFromKeyParentPath util to get Breadcrumb navigation
* Use output()
* Use viewChild Signal
* Use model Signal


### Checklist
- [x] Tests
- [x] Translations
- [x] Security Implications Contemplated (add notes if applicable)

### References

<img width="675" alt="Screenshot 2024-07-10 at 12 16 04 PM"
src="https://github.com/dotCMS/core/assets/1909643/4e7c60f6-91ef-47ec-b8c4-68c96b8e3d01">
<img width="1022" alt="Screenshot 2024-07-10 at 12 16 12 PM"
src="https://github.com/dotCMS/core/assets/1909643/dfbd7d37-d2f2-4b26-9ead-27228d6e0795">
<img width="982" alt="Screenshot 2024-07-10 at 12 16 19 PM"
src="https://github.com/dotCMS/core/assets/1909643/838c292d-b993-41c1-a7bf-7434abe2707d">


### Screenshots


https://github.com/user-attachments/assets/602b18de-f2c3-4db7-837c-4485b56f0bc9

--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
@@ -1,6 +1,6 @@
 @use "variables" as *;
 
-::ng-deep dot-crumbtrail .p-breadcrumb {
+:host ::ng-deep .p-breadcrumb {
     ul li {
         &:first-child {
             font-size: $font-size-lg;
