chore(edit-content): use the new Angular syntax

--- a/core-web/libs/block-editor/src/lib/extensions/ai-content-prompt/ai-content-prompt.component.html
+++ b/core-web/libs/block-editor/src/lib/extensions/ai-content-prompt/ai-content-prompt.component.html
@@ -31,10 +31,11 @@
                         formControlName="generatedText"
                         pInputTextarea></textarea>
 
-                    <dot-copy-button
-                        *ngIf="generatedText.value"
-                        [copy]="generatedText.value"
-                        customClass="p-button-rounded" />
+                    @if (generatedText.value) {
+                        <dot-copy-button
+                            [copy]="generatedText.value"
+                            customClass="p-button-rounded" />
+                    }
                 </div>
             }
             @if (vm.status === ComponentStatus.LOADING) {
