--- a/core-web/libs/block-editor/src/lib/extensions/bubble-menu/bubble-menu.component.html
+++ b/core-web/libs/block-editor/src/lib/extensions/bubble-menu/bubble-menu.component.html
@@ -1,13 +1,15 @@
 <div (mousedown)="preventDeSelection($event)" class="bubble-menu" id="bubble-menu">
-    <ng-container *ngIf="selected">
+    @if (selected) {
         <button (click)="toggleChangeTo.emit()" class="btn-dropdown">{{ selected }}</button>
         <div class="divider"></div>
-    </ng-container>
-    <ng-container *ngFor="let item of items; let i = index">
+    }
+    @for (item of items; track item; let i = $index) {
         <dot-bubble-menu-button
             (click)="command.emit(item)"
             [active]="item.active"
             [item]="item"></dot-bubble-menu-button>
-        <div *ngIf="item.divider" class="divider"></div>
-    </ng-container>
+        @if (item.divider) {
+            <div class="divider"></div>
+        }
+    }
 </div>
