feat(UVE): Allow users send custom query in angular

--- a/examples/angular/src/app/pages/pages.component.html
+++ b/examples/angular/src/app/pages/pages.component.html
@@ -7,7 +7,10 @@
         }
 
         <main class="container flex flex-col gap-8 m-auto">
-            <dotcms-layout [pageAsset]="context()?.pageAsset" [components]="components()" />
+            <dotcms-layout
+                [pageAsset]="context()?.pageAsset"
+                [components]="components()"
+                [editor]="editorCofig" />
         </main>
 
         @if(pageAsset.layout.footer){
