--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-wizard/dot-wizard.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-wizard/dot-wizard.component.html
@@ -1,20 +1,54 @@
-<dot-dialog
-    (hide)="close()"
-    (keydown.escape)="close()"
+<p-dialog
+    (visibleChange)="close()"
     [visible]="!!data"
-    [bindEvents]="false"
-    [actions]="dialogActions"
     [header]="data?.title"
-    #dialog>
-    <div *ngIf="data?.steps?.length" class="dot-wizard__view">
+    [draggable]="false"
+    [resizable]="false"
+    [maximizable]="false"
+    [modal]="true"
+    appendTo="body"
+>  
+    @if (data?.steps?.length) {
         <div
-            (keydown.tab)="handleTab($event)"
-            (keydown.enter)="handleEnter($event)"
-            [ngStyle]="{ transform: transform }"
-            class="dot-wizard__container">
-            <div *ngFor="let step of data.steps" class="dot-wizard__step">
-                <ng-template dotContainerReference></ng-template>
+            class="dot-wizard__view"
+        >
+            <div
+                (keydown.tab)="handleTab($event)"
+                (keydown.enter)="handleEnter($event)"
+                [ngStyle]="{ transform: transform }"
+                class="dot-wizard__container"
+            >
+                <div
+                    *ngFor="let step of data.steps"
+                    class="dot-wizard__step"
+                >
+                    <ng-template dotContainerReference></ng-template>
+                </div>
             </div>
+
+            @if($dialogActions()) {
+                <footer class="dot-wizard__footer">
+                    @if ($dialogActions().cancel) {
+                        <button
+                            (click)="$dialogActions().cancel?.action()"
+                            [disabled]="$dialogActions().cancel?.disabled"
+                            [label]="$dialogActions().cancel?.label"
+                            class="dialog__button-cancel p-button-outlined"
+                            data-testId="dotDialogCancelAction"
+                            pButton></button>
+                    }
+                    @if ($dialogActions().accept) {
+                        <button
+                            (click)="$dialogActions().accept?.action()"
+                            [disabled]="$dialogActions().accept?.disabled"
+                            [label]="$dialogActions().accept?.label"
+                            [loading]="isSaving"
+                            class="dialog__button-accept"
+                            data-testId="dotDialogAcceptAction"
+                            pButton></button>
+                    }
+                </footer>
+            }
         </div>
-    </div>
-</dot-dialog>
+    }
+</p-dialog>
