--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-wizard/dot-wizard.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-wizard/dot-wizard.component.html
@@ -7,26 +7,21 @@
     [maximizable]="false"
     [modal]="true"
     appendTo="body"
->  
+    data-testId="dot-wizard">
     @if (data?.steps?.length) {
-        <div
-            class="dot-wizard__view"
-        >
+        <div class="dot-wizard__view">
             <div
-                (keydown.tab)="handleTab($event)"
-                (keydown.enter)="handleEnter($event)"
                 [ngStyle]="{ transform: transform }"
                 class="dot-wizard__container"
-            >
-                <div
-                    *ngFor="let step of data.steps"
-                    class="dot-wizard__step"
-                >
-                    <ng-template dotContainerReference></ng-template>
-                </div>
+                (keydown.tab)="handleTab($event)">
+                @for (step of data.steps; track $index) {
+                    <div class="dot-wizard__step">
+                        <ng-template dotContainerReference></ng-template>
+                    </div>
+                }
             </div>
 
-            @if($dialogActions()) {
+            @if ($dialogActions()) {
                 <footer class="dot-wizard__footer">
                     @if ($dialogActions().cancel) {
                         <button
@@ -34,7 +29,7 @@
                             [disabled]="$dialogActions().cancel?.disabled"
                             [label]="$dialogActions().cancel?.label"
                             class="dialog__button-cancel p-button-outlined"
-                            data-testId="dotDialogCancelAction"
+                            data-testId="dialog-close-button"
                             pButton></button>
                     }
                     @if ($dialogActions().accept) {
@@ -44,7 +39,7 @@
                             [label]="$dialogActions().accept?.label"
                             [loading]="isSaving"
                             class="dialog__button-accept"
-                            data-testId="dotDialogAcceptAction"
+                            data-testId="dialog-accept-button"
                             pButton></button>
                     }
                 </footer>
