fix autocomplete and tags

--- a/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/forms/_fields.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/forms/_fields.scss
@@ -263,12 +263,17 @@ $key-val-width: 500px;
     border-radius: $border-radius-sm;
     color: $color-palette-primary;
     font-size: $font-size-sm;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: $spacing-0;
+    line-height: 0.374rem;
+    text-align: center;
     text-decoration: none;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    width: auto;
+    max-width: 112px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-left: calc($spacing-1 + $font-size-sm);
+    position: relative;
 
     &.persona {
         &:before {
@@ -279,10 +284,13 @@ $key-val-width: 500px;
     }
 
     &:after {
+        position: absolute;
+        left: $spacing-1;
         color: $color-palette-primary;
         content: "\2715";
         font-size: $font-size-sm;
         text-align: center;
+        line-height: 0.374rem;
     }
 
     &:hover {
