--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_breadcrumb.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_breadcrumb.scss
@@ -3,60 +3,45 @@
 .p-breadcrumb {
     border: 0 none;
     padding: $spacing-3 0;
-}
 
-.p-breadcrumb .p-breadcrumb-list li:first-child .p-menuitem-link .p-menuitem-text {
-    color: $black;
-}
+    .p-breadcrumb-list {
+        li {
+            .p-menuitem-link {
+                transition: none;
+                .p-menuitem-text {
+                    color: $color-palette-gray-700;
+                    font-size: $font-size-default;
+                    cursor: pointer;
+                    &[href] {
+                        color: $black;
+                        &:hover {
+                            color: $color-palette-primary;
+                            text-decoration: underline;
+                        }
+                    }
+                }
+                .p-menuitem-icon {
+                    color: $black;
+                }
+                &:focus {
+                    outline: 0 none;
+                    outline-offset: 0;
+                    box-shadow: none;
+                }
+            }
+            &.p-menuitem-separator {
+                margin: 0 $spacing-1 0 $spacing-1;
+                color: $black;
+            }
 
-.p-breadcrumb .p-breadcrumb-list li .p-menuitem-link .p-menuitem-text {
-    color: $color-palette-gray-700;
-}
-
-.p-breadcrumb ul li .p-menuitem-link {
-    transition: none;
-    border-radius: $border-radius-xs;
-}
-
-.p-breadcrumb ul li .p-menuitem-link:focus {
-    outline: 0 none;
-    outline-offset: 0;
-    box-shadow: none;
-}
-
-.p-breadcrumb ul li .p-menuitem-link[href] .p-menuitem-text {
-    font-size: $font-size-default;
-
-    &:hover {
-        color: $color-palette-primary;
-        text-decoration: underline;
-    }
-}
-
-.p-breadcrumb .p-breadcrumb-list li .p-menuitem-link .p-menuitem-icon {
-    color: $black;
-}
-
-.p-breadcrumb .p-breadcrumb-list li.p-menuitem-separator {
-    margin: 0 $spacing-1 0 $spacing-1;
-    color: $black;
-}
-
-.p-breadcrumb .p-breadcrumb-list li:last-child .p-menuitem-text {
-    color: $color-palette-gray-700;
-}
-
-.p-breadcrumb .p-breadcrumb-list li:nth-child(2) {
-    &:before {
-        content: "";
-        width: 1px;
-        height: 20px;
-        background: $color-palette-gray-500;
-        display: block;
-        margin: 0 $spacing-1;
-    }
-
-    .p-icon-wrapper {
-        display: none;
+            &:last-child {
+                .p-menuitem-text {
+                    color: $color-palette-gray-700;
+                }
+                .p-menuitem-icon {
+                    color: $color-palette-gray-700;
+                }
+            }
+        }
     }
 }
