chore: upgrade storybook

--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/searchable-dropdown/component/searchable-dropdown.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/searchable-dropdown/component/searchable-dropdown.component.scss
@@ -51,6 +51,9 @@
 
 ::ng-deep {
     .p-overlaypanel.paginator {
+        .p-paginator {
+            justify-content: center;
+        }
         .p-dataview-content {
             margin-bottom: $spacing-9;
         }
