--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/content/dot-edit-content.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/content/dot-edit-content.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="pageState$ | async as pageState">
+    <h1>asas</h1>
     <dot-form-selector
         (pick)="onFormSelected($event)"
         (shutdown)="editForm = false"
