chore(primeng): fix error with p-dataview

--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-persona-selector/dot-persona-selector.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-persona-selector/dot-persona-selector.component.html
@@ -1,4 +1,21 @@
 <div class="h-full flex">
+    <ng-template let-data="data" #listTemplate>
+        @for(personaData of data; track $index) {
+            <dot-persona-selector-option
+            (delete)="delete.emit(personaData)"
+            (switch)="personaChange($event)"
+            [canDespersonalize]="canDespersonalize"
+            [class.highlight]="
+                value?.identifier === personaData.identifier ||
+                (!value && personaData.identifier === defaultPersonaIdentifier)
+            "
+            [persona]="value?.identifier === personaData.identifier ? value : personaData"
+            [selected]="
+                value?.identifier === personaData.identifier ||
+                (!value && personaData.identifier === defaultPersonaIdentifier)
+            " />
+        }
+    </ng-template>
     <dot-searchable-dropdown
         (display)="iframeOverlayService.show()"
         (filterChange)="handleFilterChange($event)"
@@ -13,6 +30,7 @@
         [totalRecords]="paginationService.totalRecords"
         class="h-full flex-auto flex"
         #searchableDropdown
+        [externalItemListTemplate]="listTemplate"
         labelPropertyName="name"
         width="448px">
         <ng-template let-persona="item" pTemplate="select">
@@ -26,21 +44,6 @@
                 [readonly]="readonly"
                 appendTo="target"
                 tooltipPosition="bottom"></dot-persona-selected-item>
-        </ng-template>
-        <ng-template let-personaData="item" pTemplate="listItem">
-            <dot-persona-selector-option
-                (delete)="delete.emit(personaData)"
-                (switch)="personaChange($event)"
-                [canDespersonalize]="canDespersonalize"
-                [class.highlight]="
-                    value?.identifier === personaData.identifier ||
-                    (!value && personaData.identifier === defaultPersonaIdentifier)
-                "
-                [persona]="value?.identifier === personaData.identifier ? value : personaData"
-                [selected]="
-                    value?.identifier === personaData.identifier ||
-                    (!value && personaData.identifier === defaultPersonaIdentifier)
-                "></dot-persona-selector-option>
         </ng-template>
     </dot-searchable-dropdown>
 </div>
