--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/searchable-dropdown/component/searchable-dropdown.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/searchable-dropdown/component/searchable-dropdown.component.html
@@ -1,12 +1,14 @@
-<ng-template #defaultItemListTemplate let-item="item" pTemplate="listItem">
-    <span
-        (click)="handleClick(item)"
-        [class.selected]="item[labelPropertyName] === valueString"
-        class="searchable-dropdown__data-list-item"
-        data-testid="searchable-dropdown-data-list-item">
-        <i *ngIf="item[labelPropertyName] === valueString" class="pi pi-check"></i>
-        {{ item.label }}
-    </span>
+<ng-template #defaultListTemplate let-data="data" pTemplate="list">
+    <ng-container *ngFor="let item of data">
+        <span
+            (click)="handleClick(item)"
+            [class.selected]="item[labelPropertyName] === valueString"
+            class="searchable-dropdown__data-list-item"
+            data-testid="searchable-dropdown-data-list-item">
+            <i *ngIf="item[labelPropertyName] === valueString" class="pi pi-check"></i>
+            {{ item.label }}
+        </span>
+    </ng-container>
 </ng-template>
 
 <ng-template #defaultFilterTemplate>
@@ -70,17 +72,13 @@
         [totalRecords]="totalRecords"
         [value]="options"
         class="searchable-dropdown__data-list">
-        <ng-template pTemplate="list" let-data>
-            <ng-container *ngFor="let item of data">
-                <span
-                    (click)="handleClick(item)"
-                    [class.selected]="item[labelPropertyName] === valueString"
-                    class="searchable-dropdown__data-list-item"
-                    data-testid="searchable-dropdown-data-list-item">
-                    <i *ngIf="item[labelPropertyName] === valueString" class="pi pi-check"></i>
-                    {{ item.label }}
-                </span>
-            </ng-container>
+        <ng-template let-data pTemplate="list">
+            <ng-container
+                [ngTemplateOutletContext]="{
+                    data: data,
+                    selectedOptionValue: selectedOptionValue
+                }"
+                [ngTemplateOutlet]="externalItemListTemplate || defaultListTemplate"></ng-container>
         </ng-template>
     </p-dataView>
 </p-overlayPanel>
