#28724 use spacing variable

--- a/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/_dot-admin.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/_dot-admin.scss
@@ -242,7 +242,7 @@ $table-border: 1px solid $color-palette-gray-200;
         border-bottom: $table-border;
         vertical-align: middle;
         height: 2.5rem !important;
-        padding: 8px $spacing-1;
+        padding: $spacing-1;
         .listingThumbDiv {
             height: 2.9375rem;
 
