#28724 add $$icon-xl variable to manage 48px font-size icons

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
@@ -255,7 +255,7 @@ $dot-table-cell-height: 1.25rem;
         }
 
         .p-datatable-loading-icon {
-            font-size: $font-size-xxxxl;
+            font-size: $icon-xl;
             color: $color-palette-secondary;
         }
 
