--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_datatable.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_datatable.scss
@@ -203,7 +203,8 @@
 }
 
 .p-datatable .p-datatable-loading-icon {
-    font-size: $font-size-xxxxl;
+    width: $icon-xl;
+    height: $icon-xl;
     color: $color-palette-secondary;
 }
 
