--- a/core-web/libs/dotcms-scss/shared/_common.scss
+++ b/core-web/libs/dotcms-scss/shared/_common.scss
@@ -20,6 +20,7 @@ $icon-md: 16px;
 $icon-md-box: 20px;
 $icon-lg: 18px;
 $icon-lg-box: 24px;
+$icon-xl: 48px;
 
 // Screen sizes for media queries
 $screen-sm: 40em; // 640px
