--- a/core-web/libs/portlets/edit-ema/ui/src/lib/dot-seo-image-preview/dot-seo-image-preview.component.scss
+++ b/core-web/libs/portlets/edit-ema/ui/src/lib/dot-seo-image-preview/dot-seo-image-preview.component.scss
@@ -23,7 +23,7 @@ $image-height: 23.875rem;
 :host ::ng-deep {
     .dot-seo-image-preview__default {
         .pi {
-            font-size: $font-size-xxxxl;
+            font-size: $icon-xl;
             color: $color-alert-red;
         }
     }
