chore(storybook): upgrade in stories

--- a/core-web/libs/template-builder/src/lib/components/template-builder/components/add-style-classes-dialog/add-style-classes-dialog.component.scss
+++ b/core-web/libs/template-builder/src/lib/components/template-builder/components/add-style-classes-dialog/add-style-classes-dialog.component.scss
@@ -7,7 +7,7 @@
 
 .dialog__actions-container {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 p-autoComplete {
